--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,8 @@ services:
         value: 3.12.0
       - key: MODEL_PATH
         value: model/final_model.keras
+      - key: MODEL_URL
+        value: https://huggingface.co/SudoSorcerer/pneumoscan-model/resolve/main/final_model.keras
       - key: PORT
         value: 8000
       - key: HOST
